--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,55 @@ rad.json
 *.flf
 #Test results file
 TestResults.xml
+
+### AL ###
+#Template for AL projects for Dynamics 365 Business Central
+#launch.json folder
+.vscode/
+#Cache folder
+.alcache/
+#Symbols folder
+.alpackages/
+#Snapshots folder
+.snapshots/
+#Testing Output folder
+.output/
+#Extension App-file
+*.app
+#Rapid Application Development File
+rad.json
+#Translation Base-file
+*.g.xlf
+#License-file
+*.flf
+#Test results file
+TestResults.xml
+
+# Dependências
+# Esta pasta contém todos os pacotes instalados e pode ser muito grande.
+# Ela deve ser recriada com 'npm install'.
+node_modules/
+
+# Arquivos de log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Arquivos de ambiente
+# Nunca adicione arquivos com senhas ou chaves de API ao repositório.
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Arquivos do sistema operacional
+.DS_Store
+Thumbs.db
+
+# Materiais de entrega do trabalho
+# Conforme o documento, você gerará vídeos, PDFs e PPTs. É melhor não versioná-los.
+*.pptx
+*.pdf
+*.zip
