--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mariadb": "^3.2.3"
+    "mysql2": "^3.15.3",
+    "sequelize": "^6.37.7"
   }
 }
